css/card.css
html
{
    scroll-behavior: smooth;
}

#canvas
{
    position: absolute;
    top: 0;
    left: 50%;
    transform: translate(-50%,0);
    overflow: hidden;
}

.card, .title
{
    position: absolute;
}

.card-wrapper
{
    position: fixed;
    transform-box: fill-box;
    transform-origin: center;
}

.card-img
{
    width: 100%;
    height: 100%;
}

.card-inner
{
    position: relative;
    width: 100%;
    height: 100%;
    text-align: center;
    transition: transform 0.8s;
    transform-style: preserve-3d;
    perspective: 80vh;
  }
  
  
  
  /* Position the front and back side */
  .card-back, .card-face {
    position: absolute;
    width: 100%;
    height: 100%;
  }
  
  /* Style the front side (fallback if image is missing) */
  .card-back {
    background-color: #bbb;
    color: black;
  }
  
  /* Style the back side */
  .card-face {
    transform: rotateY(270deg);
  }

